# SandboxCommandRunner

./: .gitignore  CMakeLists.txt  README.md
bindings/python/: setup.py
bindings/python/CommandRunner/: __init__.py
bindings/python/tests/: demo.py  main.cpp
src/: executor.c  executor.h  logger.c  logger.h  main.c  monitor.c  monitor.h  temp.cpp
src/rules/: general_rule.c  seccomp_rules.h
